--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ venv/
 __pycache__/
 .idea/
 
+.terraform/
+terraform.tfstate
+terraform.tfstate.backup
+terraform.lock.hcl
+.terraform.lock.hcl
+
 # Ignorar archivos de compilación
 *.class
 *.o
