--- a/.github/workflows/collector.yml
+++ b/.github/workflows/collector.yml
@@ -21,13 +21,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up AWS Credentials
+      - name: Set up AWS CLI with Session Token
         run: |
-          echo "[default]" > ~/.aws/credentials
-          echo "aws_access_key_id=${{ github.event.inputs.aws_access_key_id }}" >> ~/.aws/credentials
-          echo "aws_secret_access_key=${{ github.event.inputs.aws_secret_access_key }}" >> ~/.aws/credentials
-          echo "aws_session_token=${{ github.event.inputs.aws_session_token }}" >> ~/.aws/credentials
-
+          aws configure set aws_access_key_id ${{ github.event.inputs.aws_access_key_id }}
+          aws configure set aws_secret_access_key ${{ github.event.inputs.aws_secret_access_key }}
+          aws configure set aws_session_token ${{ github.event.inputs.aws_session_token }}
+          
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
