--- a/.github/workflows/collector.yml
+++ b/.github/workflows/collector.yml
@@ -21,11 +21,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up AWS CLI with Session Token
-        run: |
-          aws configure set aws_access_key_id ${{ github.event.inputs.aws_access_key_id }}
-          aws configure set aws_secret_access_key ${{ github.event.inputs.aws_secret_access_key }}
-          aws configure set aws_session_token ${{ github.event.inputs.aws_session_token }}
+      - name: Configure AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ github.event.inputs.aws_access_key_id }}
+          aws-secret-access-key: ${{ github.event.inputs.aws_secret_access_key }}
+          aws-session-token: ${{ github.event.inputs.aws_session_token }}
+          aws-region: us-east-1
           
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
